--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "date-fns": "^2.15.0",
     "firebase": "^7.17.1",
+    "gh-pages": "^3.1.0",
     "notistack": "^0.9.17",
     "numeral": "^2.0.6",
     "react": "^16.13.1",
@@ -20,6 +21,8 @@
     "validator": "^13.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
